[package]
name = "dockerino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "0.14.18"
hyperlocal = "0.8"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"